--- a/.gitignore
+++ b/.gitignore
@@ -63,3 +63,6 @@ fastlane/Preview.html
 fastlane/screenshots
 fastlane/test_output
 fastlane/readme.md
+.idea/misc.xml
+.idea/vcs.xml
+.idea/codeStyles/Project.xml
